--- a/production/monitoring/exporter-sabnzbd/service.yaml
+++ b/production/monitoring/exporter-sabnzbd/service.yaml
@@ -3,36 +3,36 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: lidarr-exporter
-  namespace: monitoring-exportarr
+  name: exporter-sabnzbd
+  namespace: monitoring
   labels:
-    app: lidarr-exportarr
+    app: exporter-sabnzbd
 spec:
   replicas: 1
   revisionHistoryLimit: 1
   selector:
     matchLabels:
-      app: lidarr-exportarr
+      app: exporter-sabnzbd
   template:
     metadata:
       labels:
-        app: lidarr-exportarr
+        app: exporter-sabnzbd
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9707"
     spec:
       containers:
-        - name: lidarr-exporter
+        - name: exporter-sabnzbd
           image: ghcr.io/onedr0p/exportarr:v1.5.3
           args:
-            - lidarr
+            - sabnzbd
           env:
             - name: PORT
               value: "9707"
             - name: URL
-              value: "http://lidarr.servarr.svc.cluster.local:8686"
+              value: "http://sabnzbd.default.svc.cluster.local:8080"
             - name: APIKEY
-              value: "1555da6d78404bffb22c90ace2b31b31"
+              value: "441c51b1799e551d7b4757b179fe7e96"
           resources:
             requests:
               cpu: 100m
@@ -44,25 +44,25 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: lidarr-exportarr
-  namespace: monitoring-exportarr
+  name: exporter-sabnzbd
+  namespace: monitoring
   labels:
-    app: lidarr-exportarr
+    app: exporter-sabnzbd
 spec:
   selector:
-    app: lidarr-exportarr
+    app: exporter-sabnzbd
   ports:
     - name: monitoring
       port: 9707
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/monitoring.coreos.com/scrapeconfig_v1alpha1.json
 apiVersion: monitoring.coreos.com/v1alpha1
 kind: ScrapeConfig
 metadata:
-  name: lidarr
+  name: exporter-sabnzbd
   namespace: monitoring
 spec:
-  scrapeTimeout: "30s"
   staticConfigs:
     - targets:
-        - lidarr-exportarr.monitoring-exportarr.svc.cluster.local:9707
+        - exporter-sabnzbd.monitoring.svc.cluster.local:9707
   metricsPath: /metrics
