--- a/production/traefik/values.yaml
+++ b/production/traefik/values.yaml
@@ -24,7 +24,14 @@ ports:
 
 ingressRoute:
   dashboard:
-    enabled: false
+    annotations:
+      kubernetes.io/ingress.class: traefik-external
+    matchRule: Host(`traefik.internal.untouchedwagons.com`)
+    entryPoints: 
+      - traefik
+      - websecure
+    tls:
+      secretName: com-untouchedwagons-internal
 
 providers:
   kubernetesCRD:
@@ -46,6 +53,6 @@ service:
   annotations: {}
   labels: {}
   spec:
-    loadBalancerIP: 192.168.20.21 # this should be an IP in the MetalLB range
+    loadBalancerIP: 192.168.0.210 # this should be an IP in the MetalLB range
   loadBalancerSourceRanges: []
   externalIPs: []
