--- a/testing/traefik/values.yaml
+++ b/testing/traefik/values.yaml
@@ -24,7 +24,14 @@ ports:
 
 ingressRoute:
   dashboard:
-    enabled: false
+    annotations:
+      kubernetes.io/ingress.class: traefik-external
+    matchRule: Host(`traefik.testing.untouchedwagons.com`)
+    entryPoints: 
+      - traefik
+      - websecure
+    tls:
+      secretName: testing-certificate
 
 providers:
   kubernetesCRD:
@@ -45,7 +52,5 @@ service:
   type: LoadBalancer
   annotations: {}
   labels: {}
-  spec:
-    loadBalancerIP: 192.168.0.210 # this should be an IP in the MetalLB range
   loadBalancerSourceRanges: []
   externalIPs: []
