--- a/production/default/jellyfin/service.yaml
+++ b/production/default/jellyfin/service.yaml
@@ -123,7 +123,7 @@ metadata:
     traefik.ingress.kubernetes.io/redirect-entry-point: https
 spec:
   rules:
-  - host: jellyfin.internal.untouchedwagons.com
+  - host: jellyfin.services.internal.untouchedwagons.com
     http:
       paths:
       - backend:
@@ -136,4 +136,4 @@ spec:
   tls:
     - hosts: 
       - untouchedwagons.com
-      secretName: com-untouchedwagons-internal
+      secretName: com-untouchedwagons-internal-services
