--- a/production/default/sabnzbd/service.yaml
+++ b/production/default/sabnzbd/service.yaml
@@ -122,7 +122,7 @@ metadata:
     traefik.ingress.kubernetes.io/redirect-entry-point: https
 spec:
   rules:
-  - host: sabnzbd.internal.untouchedwagons.com
+  - host: sabnzbd.services.internal.untouchedwagons.com
     http:
       paths:
       - backend:
@@ -135,4 +135,4 @@ spec:
   tls:
     - hosts: 
       - untouchedwagons.com
-      secretName: com-untouchedwagons-internal
+      secretName: com-untouchedwagons-internal-services
