--- a/production/servarr/sonarr/service.yaml
+++ b/production/servarr/sonarr/service.yaml
@@ -125,7 +125,7 @@ metadata:
     traefik.ingress.kubernetes.io/redirect-entry-point: https
 spec:
   rules:
-  - host: sonarr.internal.untouchedwagons.com
+  - host: sonarr.services.internal.untouchedwagons.com
     http:
       paths:
       - backend:
@@ -138,4 +138,4 @@ spec:
   tls:
     - hosts: 
       - untouchedwagons.com
-      secretName: com-untouchedwagons-internal
+      secretName: com-untouchedwagons-internal-services
