Truenas fell over and died on me, switching back to Longhorn

--- a/production/database/docker-db-backup/service.yaml
+++ b/production/database/docker-db-backup/service.yaml
@@ -65,4 +65,4 @@ spec:
         - name: backups
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/Media/Backups
+            path: /tank/Media/Backups
