--- a/production/database/postgresql-restore/bazarr.yaml
+++ b/production/database/postgresql-restore/bazarr.yaml
@@ -45,5 +45,5 @@ spec:
         - name: backups
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/Media/Backups
+            path: /tank/Media/Backups
       restartPolicy: Never
