--- a/production/database/postgresql-restore/prowlarr.yaml
+++ b/production/database/postgresql-restore/prowlarr.yaml
@@ -64,5 +64,5 @@ spec:
         - name: backups
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/Media/Backups
+            path: /tank/Media/Backups
       restartPolicy: Never
