--- a/production/networking/ispyagentdvr/service.yaml
+++ b/production/networking/ispyagentdvr/service.yaml
@@ -81,11 +81,11 @@ spec:
         - name: backups
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/Media/Backups
+            path: /tank/Media/Backups
         - name: ispyagentdvr-media
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/ISpyAgentDVR
+            path: /tank/ISpyAgentDVR
 
 ---
 apiVersion: v1
