--- a/production/servarr/radarr/service.yaml
+++ b/production/servarr/radarr/service.yaml
@@ -85,19 +85,19 @@ spec:
         - name: backups
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/Media/Backups
+            path: /tank/Media/Backups
         - name: videos
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/Media/Videos
+            path: /tank/Media/Videos
         - name: torrents
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/Media/Torrents
+            path: /tank/Media/Torrents
         - name: usenet
           nfs:
             server: 192.168.0.30
-            path: /mnt/tank/Media/Usenet
+            path: /tank/Media/Usenet
 ---
 apiVersion: v1
 kind: Service
